--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,310 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+<!doctype html>
+<html lang="fr" xmlns="http://www.w3.org/1999/html">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Romantic hotel all over the planet">
+    <meta name="author" content="Chouphaidana,Bootstrap and Symfony contributors">
+    <meta name="generator" content="Jekyll v4.1.1">
+    <meta name="theme-color" content="#712cf9">
+    <title>{% block title%}Hypnos - World Hôtels {%endblock%}</title>
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+    <!-- Bootstrap core CSS -->
+    <link href="{{asset('assets/css/bootstrap.min.css')}}" rel="stylesheet">
+    <link href="{{asset('assets/css/hypnosStyle.css')}}" rel="stylesheet">
+    <link href="{{asset('assets/css/carousel.css')}}" rel="stylesheet">
+    <style>
+        body{
+            background-color: azure;
+        }
+        .centerTitle{
+            text-align: center;
+            font-style: italic;
+            color: #14ecec;
+        }
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            user-select: none;
+        }
+
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        }
+
+        .b-example-divider {
+            height: 3rem;
+            background-color: rgba(0, 0, 0, .1);
+            border: solid rgba(0, 0, 0, .15);
+            border-width: 1px 0;
+            box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+        }
+
+        .b-example-vr {
+            flex-shrink: 0;
+            width: 1.5rem;
+            height: 100vh;
+        }
+
+        .bi {
+            vertical-align: -.125em;
+            fill: currentColor;
+        }
+
+        .nav-scroller {
+            position: relative;
+            z-index: 2;
+            height: 2.75rem;
+            overflow-y: hidden;
+        }
+
+        .nav-scroller .nav {
+            display: flex;
+            flex-wrap: nowrap;
+            padding-bottom: 1rem;
+            margin-top: -1px;
+            overflow-x: auto;
+            text-align: center;
+            white-space: nowrap;
+            -webkit-overflow-scrolling: touch;
+        }
+    </style>
+
+    <!-- Custom styles for this template -->
+
+    <link href="{{asset('assets/css/carousel.css')}}" rel="stylesheet">
+
+</head>
+<body>
+<header>
+
+    <!-- Barre de Navigation -->
+
+
+
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark" style="background-color:#dc143c">
+            <a class="navbar-brand" href="/">
+                <img src="{{asset('assets/image/hypnos_badge.jpg')}}" style="width:100px;height:100px;" alt="Hypnos - World Hôtel">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" aria-current="page" href="/noshotels">Nos Hôtels</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" aria-current="page" href="/aboutus">A Propose de Nous </a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" aria-current="page" href="/reservation">Réservation</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/inscription">Inscription</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/contact">Contact</a>
+                    </li>
+                </ul>
+
+                <div class="navbar-item-custom">
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav">
+                <li class="nav-item">
+                    {% if app.user%}
+                        <a class="nav-link active" aria-current="page" href="{{ path ('app_account') }}">Mon Compte <small>( {{app.user.firstname }} ) </small></a>|<a class="nav-link active" href="{{ path ('app_logout') }}">Déconnections</a>
+                    {% else %}
+                    <a class="nav-link active" aria-current="page" href="{{ path ('app_login') }}">Connection</a> | <a class="nav-link active" href="{{ path ('app_register') }}">Inscription</a>
+                    {%endif%}
+                </li>
+                </ul>
+            </div>
+            </div>
+            </div>
+        </div>
+    </nav>
+</header>
+<br><br><br>
+{%if carousel is defined %}
+
+<main role="main">
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-interval="2500">
+        <div class="carousel-inner">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="{{asset('assets/image/hotel_bali/bali_1.jpg')}}" style="width:100%;height:550px;" class="d-block w-100" alt="Bali">
+                <div class="container">
+                    <div class="carousel-caption text-left">
+                        <h5>Bali</h5>
+                        <p>Magnifique Indonésie</p>
+                        <p><a class="btn btn-lg btn-danger" href="/reservation">Départ Immédiat !</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+            <div class="carousel-item">
+                <img src="{{asset('assets/image/hotel_maldive/maldive_1.jpg')}}" style="width:100%;height:600px;" class="d-block w-100" alt="Les Maldives">
+                <div class="container">
+                    <div class="carousel-caption text-left">
+                        <h1>Les Maldives</h1>
+                        <p>Some representative placeholder content for the second slide of the carousel.</p>
+                        <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+
+                <div class="container">
+                    <div class="carousel-caption text-left">
+                        <h1>One more for good measure.</h1>
+                        <p>Some representative placeholder content for the third slide of this carousel.</p>
+                        <p><a class="btn btn-lg btn-danger" href="#">Browse gallery</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <a class="carousel-control-prev" type="button" data-bs-target="carouselExampleCaptions" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Precedent</span>
+    </a>
+    <a class="carousel-control-next" type="button" data-bs-target="carouselExampleCaptions" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Suivant</span>
+    </a>
+    </div>
+
+    {%endif%}
+
+    <!-- Block Covid -->
+
+  {% if covid is defined %}
+
+        <div class="container">
+            <div class="row">
+                <!-- Bar Covid -->
+                <div class="alert alert-danger" role="alert">
+                    <a href="/covid"><h6>Covid 19 : Information</h6></a>
+                </div>
+            </div>
+        </div>
+    {%endif%}
+    <!-- Marketing messaging and featurettes
+    ================================================== -->
+    <!-- Wrap the rest of the page in another container to center all the content. -->
+
+    {%block marketing%}
+    {%endblock%}
+
+{%block content%}
+{%endblock%}
+
+    {%block marketingBis%}
+    {%endblock%}
+
+    {%block reservation%}
+    {%endblock%}
+
+
+</main>
+
+
+
+
+
+</body>
+</html>
+
+    <!-- /.container -->
+
+    <!-- Footer -->
+<!-- FOOTER -->
+<div class="container">
+    <p class="center"><a href="/">Hypnos World Hôtels</a></p>
+</div>
+<footer class="footer" role="contentinfo">
+    <div class="footer-middle">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-sm-6">
+                    <div class="footer-pad">
+                        <h4><a href="/noshotels"></a>Nos Hôtels</h4>
+                        <ul class="list-unstyled">
+                            <li> <a href="/bali">Bali - Indonésie</a></li>
+                            <li> <a href="/lesmaldives">Les Maldives</a></li>
+                            <li> <a href="/marrakech">Marrakech - Maroc</a></li>
+                            <li> <a href="/paris">Paris - France</a></li>
+                            <li> <a href="/salzbourg">Salzbourg - Autriche</a></li>
+                            <li> <a href="/santorin">Santorin - Grêce</a></li>
+                            <li> <a href="/venise">Venise - Italie</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="footer-pad">
+                        <h4>Informations</h4>
+                        <ul class="list-unstyled">
+                            <li><a href="/aboutus">A Propose de Nous</a> </li>
+                            <li><a href="/reservation">Réservation</a> </li>
+                            <li><a href="/claim">Réclamation</a></li>
+                            <li><a href="/contact">Contact</a></li>
+                            <li><a href="/faqs">FAQs</a></li>
+                            <li><a href="/jobs">Recrutement</a></li>
+                            <li><a href="/price">Tarifs</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="footer-pad">
+                        <h4> Hypnos - World Hôtel </h4>
+                        <ul class="list-unstyled">
+                            <li> <a href="mailto:contact@hypnos.chouphaidana.org">Contact - Bali</a> </li>
+                            <li> <a href="mailto:contact@hypnos.chouphaidana.org">Contact - Les Maldives</a> </li>
+                            <li> <a href="mailto:contact@hypnos.chouphaidana.org">Contact - Marrakech</a></li>
+                            <li> <a href="mailto:contact@hypnos.chouphaidana.org">Contact - Paris</a></li>
+                            <li> <a href="mailto:contact@hypnos.chouphaidana.org">Contact - Salzbourg</a> </li>
+                            <li> <a href="mailto:contact@hypnos.chouphaidana.org">Contact - Santorin</a> </li>
+                            <li> <a href="mailto:contact@hypnos.chouphaidana.org">Contact - Venise</a> </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <h4>Suivez - Nous :</h4>
+                    <ul class="social-network social-circle">
+                        <li> <a href="https://www.facebook.com/" class="icoFacebook" title="Facebook"> <em class="fa fa-facebook"> </em> </a> </li>
+                        <li> <a href="https://fr.linkedin.com/" class="icoLinkedin" title="Linkedin"> <em class="fa fa-linkedin"> </em> </a> </li>
+                        <li> <a href="https://www.youtube.com/" class="icoYoutube" title="Youtube"> <em class="fa fa-youtube"> </em></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 copy">
+                    <p class="text-center">&copy; 2017 – 2022 Hypnos World Hôtel , Inc. &middot; <a href="/private">Privacy</a> &middot; <a href="/cgv">Terms</a><br>
+                    Hypnos World Hôtels - On va bien trouver votre bonheur ....</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
+
+    <!-- Liens Asset Java Script -->
+    <script src="{{ asset ('assets/js/bootstap.bundle.js')}}" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+
+
+</body>
 </html>
